@@ -329,8 +329,8 @@ public abstract class BaseHttpClusterStateProvider implements ClusterStateProvid
                 "LISTALIASES not found, possibly using older Solr server. Aliases won't work {}",
                 "unless you upgrade Solr server",
                 e);
-            this.aliases = Collections.emptyMap();
-            this.aliasProperties = Collections.emptyMap();
+            this.aliases = Map.of();
+            this.aliasProperties = Map.of();
             this.aliasesTimestamp = System.nanoTime();
             return aliases;
           }
@@ -354,7 +354,7 @@ public abstract class BaseHttpClusterStateProvider implements ClusterStateProvid
   @Override
   public Map<String, String> getAliasProperties(String alias) {
     getAliases(false);
-    return Collections.unmodifiableMap(aliasProperties.getOrDefault(alias, Collections.emptyMap()));
+    return Collections.unmodifiableMap(aliasProperties.getOrDefault(alias, Map.of()));
   }
 
   @Override
